--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -14,6 +14,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.9",
     "vue": "^3.5.18"
   },
   "devDependencies": {
