--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "vue": "^3.5.18"
