--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.0",
+    "unplugin-vue-components": "^29.1.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
