--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@supabase/supabase-js": "^2.57.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "vue": "^3.5.18"
