--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "express": "^5.1.0",
     "mongoose": "^8.18.1"
   },
   "type": "module"
-  
 }
