--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -18,7 +18,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
