--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.18",
     "dayjs-ext": "^2.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "express-session": "^1.18.2",
+    "mongoose": "^8.19.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "type": "module"
 }
