--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.12.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "vue": "^3.5.18",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
